--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,17 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Толк Файн | Выучи главные фразы – Бесплатный английский онлайн</title>
+    <script>
+      const synth =  window.speechSynthesis;
+      synth.onvoiceschanged = function() { synth.getVoices(); };
+      synth.onvoiceschanged();
+    </script>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(51905633, "init", { id:51905633, clickmap:true, trackLinks:true, accurateTrackBounce:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/51905633" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
