--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-config" content="browserconfig.xml">
     <title>Толк Файн | Выучи главные фразы – Бесплатный английский онлайн</title>
   </head>
   <body>
