added meta data

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-config" content="browserconfig.xml">
+    <meta name="description" content="Веб-приложение, которое поможет вам запомнить популярные английские фразы, особенно полезные в живом общении">
+    <meta name="keywords" content="английских, фразы, выражения, идиомы, онлайн, обучение, приложение, упражнения, популярные, полезные, толк файн, talk fine, топ">
+    <meta name="author" content="svognev, Светозар Огнев">
     <title>Толк Файн | Выучи главные фразы – Бесплатный английский онлайн</title>
   </head>
   <body>
