--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Веб-приложение, которое поможет вам запомнить популярные английские фразы, особенно полезные в живом общении">
     <meta name="keywords" content="английских, фразы, выражения, идиомы, онлайн, обучение, приложение, упражнения, популярные, полезные, толк файн, talk fine, топ">
     <meta name="author" content="svognev, Светозар Огнев">
-    <title>Толк Файн | Выучи главные фразы – Бесплатный английский онлайн</title>
+    <title>Толк Файн | Выучи все главные фразы – Бесплатный английский онлайн</title>
   </head>
   <body>
     <noscript>
