--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta name="keywords" content="английских, фразы, выражения, идиомы, онлайн, обучение, приложение, упражнения, популярные, полезные, толк файн, talk fine, топ">
     <meta name="author" content="svognev, Светозар Огнев">
     <title>Толк Файн | Выучи все главные фразы – Бесплатный английский онлайн</title>
+    <meta name="google-site-verification" content="4iMKNQclDVCnEodsUiufs4lLlcye6SE26nYwWiwVg6c" />
   </head>
   <body>
     <noscript>
